update README
Added academic context and paper details to README. Updated various sections for clarity and accuracy.